# DiscogsCollectionManager

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  backend.py  compose.yml  defaultconfig.toml  gui.py  main.py  pyproject.toml  requirements.txt  settings.yml  table_schema.txt
.github/workflows/: docker-image.yml
diagrams/: database_structure.puml
src/: main.py
src/core/: backend.py  core_classes.py  database_manager.py  discogs_conn.py  table_schema.txt
src/gui/: gui.py  gui_classes.py  gui_constants.py
