[project]
name = "discogscollectionsorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.3.0,<4.0.0",
    "python3-discogs-client>=2.8.0,<3.0.0",
    "pywebview>=6.1,<7.0",
    "pywebview[qt]>=6.1,<7.0 ; sys_platform == 'linux'",
    "tomlkit>=0.13.0,<1.0.0",
]
